# rust-sbash

./: Cargo.toml  README.md  README.tmpl.md  test.bash  test.sb  workflows.sb
examples/: all-features.sb  simple.sb
src/: lib.rs  main.rs  parser.rs
tests/: goldentests.rs
tests/goldenfiles/: empty_body.txt  empty_forward_args.txt  hyphen_in_arg.txt  inline.txt  minimal_lines.txt  multi_arg.txt  multi_forward_args.txt  public.sh  single_arg.txt
tests/goldenfiles/examples/: all-features.txt  simple.txt
tests/scripts/: empty_body.sb  empty_forward_args.sb  hyphen_in_arg.sb  inline.sb  minimal_lines.sb  multi_arg.sb  multi_forward_args.sb  public.sb  single_arg.sb
