[package]
name = "sbash"
version = "0.0.0"
authors = ["Simon Bourne <simonbourne@gmail.com>"]
edition = "2021"
description="Scripting for rust project workflows"
homepage="https://github.com/simon-bourne/rust-sbash"
repository="https://github.com/simon-bourne/rust-sbash"
license = "MIT OR Apache-2.0"

categories = ["development-tools::build-utils"]
keywords = ["bash", "shell", "workflow"]

[dependencies]
nom="7.1.0"
nom_locate = "4.0.0"
bytecount = "0.6.2"
nom-greedyerror = "0.4.0"
thiserror = "1.0.30"
clap = "3.0.7"
clap_complete = "3.0.4"
indoc = "1.0.3"

[dev-dependencies]
goldenfile = "1.1.0"
